--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = "https://douglascardoso.netlify.app/"
-title   = "Douglas Cardoso"
-languageCode = "pt-br"
+baseURL = "https://example.com"
+title   = "Hello Friend NG"
+languageCode = "en-us"
 theme = "hello-friend-ng"
 
 PygmentsCodeFences = true
@@ -46,7 +46,7 @@ disableHugoGeneratorInject = false
 
 [params]
   [params.author]
-    name = "Douglas Cardoso"
+    name = "Jane Doe"
 
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
@@ -55,7 +55,7 @@ disableHugoGeneratorInject = false
 
   # Metadata mostly used in document's head
   # 
-  description = "Um blog sobre Swift"
+  description = "Nice theme for homepages and blogs"
   keywords = ""
   images = [""]
 
@@ -114,7 +114,7 @@ disableHugoGeneratorInject = false
   # If you want, you can easily override the default footer with your own content. 
   #
   [params.footer]
-    trademark = 2024
+    trademark = 2023
     rss = true
     copyright = true
     author = true
@@ -223,11 +223,11 @@ disableHugoGeneratorInject = false
 
   [[params.social]]
     name = "github"
-    url  = "https://github.com/douglascf12"
+    url  = "https://github.com/"
 
   [[params.social]]
     name = "linkedin"
-    url  = "https://www.linkedin.com/in/douglascf12"
+    url  = "https://www.linkedin.com/"
 
   [[params.social]]
     name = "stackoverflow"
@@ -235,23 +235,23 @@ disableHugoGeneratorInject = false
 
 [languages]
   [languages.en]
-    weight    = 2
+    weight    = 1
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
   [languages.en.params]
     subtitle  = "Hello Friend NG Theme"
 
-#  [languages.fr]
-#    weight    = 3
-#    copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
-#  [languages.fr.params]
-#    subtitle  = "Hello Friend NG Theme"
+  [languages.fr]
+    weight    = 2
+    copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
+  [languages.fr.params]
+    subtitle  = "Hello Friend NG Theme"
 
 [menu]
   [[menu.main]]
-    identifier = "sobre"
-    name       = "Sobre"
-    url        = "sobre/"
+    identifier = "about"
+    name       = "About"
+    url        = "about/"
   [[menu.main]]
-    identifier = "tutoriais"
-    name       = "Tutoriais"
+    identifier = "posts"
+    name       = "Posts"
     url        = "posts/"
