--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://example.com"
 title   = "Hello Friend NG"
-languageCode = "en-us"
+languageCode = "pt-br"
 theme = "hello-friend-ng"
 
 PygmentsCodeFences = true
